# billiards-rust

./: .gitignore  Cargo.toml
src/: algebra.rs  billiards.rs  command_line.rs  data.rs  geometry.rs  main.rs  repl.rs  singularity.rs  util.rs  vector.rs
src/billiards/: base_edge.rs  embedding.rs  homotopy.rs  singularity.rs  turn_path.rs
src/command_line/: apex_set.rs  command_apex_set.rs  mod.rs  pointset.rs  tabulator.rs
src/command_line/pointset/: plot.rs
src/data/: apex_set.rs  mod.rs
src/geometry/: mod.rs
src/util/: power_cache.rs
