[package]
name = "billiards"
version = "0.1.0"
authors = ["faeraga <faeraga@faec.me>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
rug = { version = "1.6.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.2"
clap = "2.33.0"
colored = "1.9"
rustyline = "6.3.0"
enum-map = "0.6.3"
#maplit = "1.0.2"